tests/fixtures/errors/fnptr_field_bare_read.z
# E0300: a bare value-position read of an args-bearing fn-pointer field.
inc: function {v: u64} out u64 is {
    return v + 1
}

Proc: class {
    op: inc
} as {
    grab: function {:this} out u64 is {
        f: this.op
        return (f v: 1)
    }
}

main: function is {
    p: (Proc op: inc.take)
    print "\{p.grab}"
}
